# Project3KUDatingApp

./: .gitignore  README.md  a.py
Documents/: Project 3_ Requirements.xlsx  sprint2_artifacts.md  sprint3_artifacts.md  sprint4_artifacts.md
frontend/: angular.json  package-lock.json  package.json
frontend/.angular/cache/17.3.17/angular-webpack/17beee3d8dc356c7b246ec8e6926ed9a5f256c7a/: 1.pack  10.pack  11.pack  12.pack  13.pack  14.pack  15.pack  16.pack  2.pack  3.pack  4.pack  6.pack  7.pack  8.pack  index.pack  index.pack.old
frontend/.angular/cache/17.3.17/angular-webpack/2c5ad8221c7ebe619989bf203525eb0cd40393fe/: 0.pack  1.pack  10.pack  11.pack  12.pack  13.pack  14.pack  15.pack  16.pack  17.pack  3.pack  4.pack  5.pack  6.pack  7.pack  9.pack  index.pack  index.pack.old
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
frontend/src/app/components/backend-integration/: backend-integration.component.ts
frontend/src/app/components/chat-window/: chat-window.component.ts
frontend/src/app/components/swipe-interface/: swipe-interface.component.ts
frontend/src/app/services/: auth.service.ts  chat.service.ts  match.service.ts  preferences.service.ts  profile.service.ts
jaymatch_server/: Cargo.toml  test.db
jaymatch_server/src/: main.rs
src/app/: app.component.ts  app.module.ts
