[package]
name = "jaymatch"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
actix-web-actors = "4.3.1"
chrono = "0.4.42"
futures-util = "0.3.31"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = "1.0.228"
serde_json = "1.0.145"
uuid = "1.18.1"
